[workspace]
members = [
    "block_engine",
    "core",
    "jito-protos",
    "packet_blaster",
    "relayer",
    "rpc",
    "transaction-relayer",
    "web"
]

[profile.release]
# thin has minimal overhead vs none (default): https://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html
lto = "thin"

# enable debug symbols for profiling the heap using jeprof
# example: jeprof --web target/release/jito-transaction-relayer jeprof.3085546.9823.i24.heap
#debug = true
