[package]
name = "bench_e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
solana-perf = "1.10.24"
#solana-net-utils = "1.10.24"
tokio = { version = "1.14.1", features = ["rt-multi-thread"] }
jito-protos = { path = "../jito-protos" }
