[package]
name = "bench_e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
env_logger = "0.9.0"
log = "0.4.17"
solana-perf = "1.10.24"
solana-client = "1.10.24"
solana-sdk = "1.10.24"
tokio = { version = "1.14.1", features = ["rt-multi-thread"] }
jito-protos = { path = "../jito-protos" }
