[package]
name = "jito-block-engine"
version = "0.1.0"
description = "Relayer Block Engine Client"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
cached = "0.42.0"
dashmap = "5.4.0"
jito-protos = { path = "../jito-protos" }
log = "0.4.17"
prost-types = "0.11.8"
solana-metrics = "=1.14.13"
solana-perf = "=1.14.13"
solana-sdk = "=1.14.13"
thiserror = "1.0.40"
tokio = { version = "~1.14.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.12"
tonic = { version = "0.9.1", features = ["tls", "tls-roots", "tls-webpki-roots"] }
