[package]
name = "jito-block-engine"
version = "0.1.0"
description = "Relayer Block Engine Client"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
cached = { workspace = true }
dashmap = { workspace = true }
jito-protos = { workspace = true }
log = { workspace = true }
prost-types = { workspace = true }
solana-metrics = { workspace = true }
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
