[package]
name = "jito-relayer-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4.11", features = ["serde"] }
env_logger = "0.9"
jito-protos = { path = "../jito-protos" }
log = "0.4.17"
solana-sdk = "=1.14.18"
thiserror = "1.0.40"
tokio = { version = "~1.14.1", features = ["rt-multi-thread"] }
tonic = "0.9.2"
