[package]
name = "jito-core"
version = "0.1.0"
description = "Core Code"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
crossbeam-channel = "0.5.8"
dashmap = "5.4.0"
jito-rpc = { path = "../rpc" }
lazy_static = "1.4.0"
log = "0.4.17"
rayon = "1.7.0"
solana-client = "=1.14.17"
solana-core = "=1.14.17"
solana-gossip = "=1.14.17"
solana-measure = "=1.14.17"
solana-metrics = "=1.14.17"
solana-perf = "=1.14.17"
solana-rayon-threadlimit = "=1.14.17"
solana-runtime = "=1.14.17"
solana-sdk = "=1.14.17"
solana-streamer = "=1.14.17"
thiserror = "1.0.40"
tokio = { version = "~1.14.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.12"
