[package]
name = "jito-fasttpu"
description = "Jito fast TPU server"
version = { workspace = true }
authors = ["Richard Patel <ripatel@jumptrading.com>"]
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
libc = "0.2.150"
quiche = "0.20.1"
rand = { workspace = true, features = ["small_rng"] }
socket2 = { version = "0.5.6", features = ["all"] }
