[package]
name = "jito-geyser-state-manager"
version = "0.1.0"
description = "Code to for managing geyser state"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
crossbeam-channel = "0.5.4"
log = "0.4.17"
solana-client = "=1.14.13"
solana-metrics = "=1.14.13"
solana-sdk = "=1.14.13"
