[package]
name = "jito-packet-blaster"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.9"
futures-util = "0.3"
log = "0.4.17"
once_cell = "1"
quinn = "0.9"
solana-client = "=1.14.13"
solana-perf = "=1.14.13"
solana-net-utils = "=1.14.13"
solana-sdk = "=1.14.13"
tokio = { version = "~1.14.1", features = ["rt-multi-thread"] }
