[package]
name = "jito-relayer"
version = "0.1.0"
description = "Relayer GRPC server"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4.24"
crossbeam-channel = "0.5.8"
ed25519-dalek = "1.0.1"
histogram = "0.6.9"
jito-protos = { path = "../jito-protos" }
jito-rpc = { path = "../rpc" }
jwt = { version = "0.16.0", features = ["openssl"] }
keyed_priority_queue = "0.4.1"
log = "0.4.17"
openssl = "0.10.51"
prost-types = "0.11.9"
rand = "0.8.5"
serde = "1.0.160"
sha2 = "0.10.6"
solana-client = "=1.14.18"
solana-metrics = "=1.14.18"
solana-perf = "=1.14.18"
solana-sdk = "=1.14.18"
thiserror = "1.0.40"
tokio = { version = "~1.14.1" }
tokio-stream = "0.1.12"
tonic = "0.9.2"
