[package]
name = "jito-relayer"
version = "0.1.0"
description = "Relayer GRPC server"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
ed25519-dalek = { workspace = true }
histogram = { workspace = true }
jito-protos = { workspace = true }
jito-rpc = { workspace = true }
jwt = { workspace = true }
keyed_priority_queue = { workspace = true }
log = { workspace = true }
openssl = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
