[package]
name = "jito-rpc"
version = "0.1.0"
description = "Code to communicate with RPC servers"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
solana-sdk = { workspace = true }
