[package]
name = "jito-transaction-relayer"
version = "0.1.0"
description = "Solana Transaction Relayer"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
dashmap = "5.4.0"
env_logger = "0.9"
h2 = "=0.3.18" # CVE-2023-26964
hostname = "0.3"
itertools = "0.10.5"
jito-block-engine = { path = "../block_engine" }
jito-geyser-protos = "0.0.2"
jito-core = { path = "../core" }
jito-protos = { path = "../jito-protos" }
jito-relayer = { path = "../relayer" }
jito-relayer-web = { path = "../web" }
jito-rpc = { path = "../rpc" }
jwt = { version = "0.16.0", features = ["openssl"] }
log = "0.4.17"
openssl = "0.10.51"
prost-types = "0.11.9"
reqwest = "0.11.16"
solana-address-lookup-table-program = "=1.14.18"
solana-client = "=1.14.18"
solana-core = "=1.14.18"
solana-metrics = "=1.14.18"
solana-net-utils = "=1.14.18"
solana-perf = "=1.14.18"
solana-program = "=1.14.18"
solana-sdk = "=1.14.18"
tikv-jemallocator = { version = "0.5", features = ["profiling"] }
tokio = { version = "~1.14.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.12"
tonic = { version = "0.8.3", features = ["tls", "tls-roots", "tls-webpki-roots"] }
