[package]
name = "jito-relayer-web"
version = "0.1.0"
description = "Transaction relayer web server"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
axum = "0.5.17"
jito-relayer = { path = "../relayer" }
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
solana-sdk = "=1.14.17"
tokio = "~1.14.0"
tower = { version = "0.4.1", features = ["limit"] }
