[package]
name = "jito-relayer-web"
version = "0.1.0"
description = "Transaction relayer web server"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
jito-relayer = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
